tests/expected/recovery/expressions/001_binary_missing_rhs.txt
{
  "type": "Program",
  "start": 0,
  "end": 97,
  "sourceType": "script",
  "hashbang": null,
  "body": [
    {
      "type": "VariableDeclaration",
      "start": 46,
      "end": 66,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 52,
          "end": 64,
          "id": {
            "type": "Identifier",
            "start": 52,
            "end": 58,
            "name": "broken"          },
          "init": {
            "type": "Literal",
            "start": 61,
            "end": 62,
            "value": 1,
            "raw": "1"          }        }
      ]    },
    {
      "type": "VariableDeclaration",
      "start": 67,
      "end": 96,
      "kind": "const",
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 73,
          "end": 95,
          "id": {
            "type": "Identifier",
            "start": 73,
            "end": 91,
            "name": "anchor_after_error"          },
          "init": {
            "type": "Literal",
            "start": 94,
            "end": 95,
            "value": 1,
            "raw": "1"          }        }
      ]    }
  ],
  "comments": [
    {
      "type": "Line",
      "start": 0,
      "end": 45,
      "value": " Binary expression missing right-hand side."
    }
  ],
  "errors": [
    {
      "code": "K2020",
      "severity": "error",
      "message": "Expected expression after operator",
      "line": 2,
      "column": 20,
      "offset": 65
    }
  ]
}
error[K2020]: Expected expression after operator
  --> /Users/kakurega/dev/projects/kessel/tests/runners/../fixtures/recovery/expressions/001_binary_missing_rhs.js:2:20
   |
 2 | const broken = 1 + ;
   |                    ^
  = note: see TS1109

--- Statistics ---
Arena: used=37760B reserved=16777216B ratio=0%
Parse errors: 1
